--- a/test/fixtures/test_passages.yml
+++ b/test/fixtures/test_passages.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  test: one
   user: one
+  test: one
+  current_question: one
+  correct_questions: 1
 
 two:
-  test: two
   user: two
+  test: two
+  current_question: two
+  correct_questions: 1
